DepQBF Use Cases

--- a/Paper/2021_QBF_Cert.tex
+++ b/Paper/2021_QBF_Cert.tex
@@ -194,16 +194,40 @@
 
 \section{Introduction}
 \label{sec:intro}
-Quantified Boolean formulas (QBFs) is an extension of propositional formulas with existential and universal quantifiers over the propositional variables. The use of quantifiers provides more succinct encoding of problems than with just propositional variables. For example QBF encoding of Bounded model checking (BMC) problem \cite{DershowitzHK05} can be exponentially more compact than corresponding propositional encoding. However, this comes with a price, QBFs are much more difficult to solve than propositional formulas. The decision problem of propositional satisfiability (SAT) is NP-complete \cite{Cook71} whereas, the decision problem of QBFs (QSAT) is the prototypical PSPACE-problem \cite{StockmeyerM73}. QBF is a powerful host language for many application domains in automated reasoning and artificial intelligence, including planning \cite{AnsoteguiGS05, EglyKLP17}, verification \cite{MillerSB13} and synthesis \cite{BloemKS14}.
+Quantified Boolean formulas (QBFs) is an extension of propositional formulas with existential and universal quantifiers over the propositional variables. The use of quantifiers provides more succinct encoding of problems than with just propositional variables. For example QBF encoding of Bounded model checking (BMC) problem \cite{DershowitzHK05} can be exponentially more compact than corresponding propositional encoding. However, this comes with a price, QBFs are much more difficult to solve than propositional formulas. The decision problem of propositional satisfiability (SAT) is NP-complete \cite{Cook71} whereas, the decision problem of QBFs (QSAT) is the prototypical PSPACE-problem \cite{StockmeyerM73}. QBF is a powerful host language for many application domains in automated reasoning and artificial intelligence, including planning \cite{AnsoteguiGS05, EglyKLP17}, verification \cite{MillerSB13} and synthesis \cite{BloemKS14, BloemEKKL14}.
 
-For many of the applications of QBFs, finding whether QBF is \textit{true} or \textit{false} is not enough and sometimes worthless. For instance, in BMC, if the safety property is violated, the tool should provide a counter-example. Therefore, in addition to bare yes/no answers, a QBF solver must provide \textit{certificates}; a proof or reason for unsatisfiability to construct the counter-examples. In comparison to SAT, the QBF technology is still in the early stages of it's development, and the solvers are error-prone. To establish the trust in the correctness of a QBF solver certificates are a must. Most of the modern QBF solvers in addition to solve the satisfiability problem of the formula produce certificates \cite{Balabanov2015, RabeS16, BalabanovJ12, Benedetti05, NarizzanoPPT09, NiemetzPLSB12, JussilaBSKW07, GoultiaevaGB11, Van2013, HeuleSB17}. The most general format is a set of Skolem functions representing a model for a true or false QBF. 
-A complete certification process will ensure the correctness of the solver's result and enables reasoning tasks that require witness. 
+For many of the applications of QBFs, finding whether QBF is \textit{true} or \textit{false} is not enough and sometimes worthless. For instance, in BMC, if the safety property is violated, the tool should provide a counter-example. Therefore, in addition to bare yes/no answers, a QBF solver must provide \textit{certificates} to construct the counter-examples. In comparison to SAT, the QBF technology is still in the early stages of it's development, and the solvers are relatively more error-prone. To establish the trust in the correctness of a QBF solver certificates are a must. Most of the modern QBF solvers in addition to solve the satisfiability problem of the formula produce certificates \cite{Balabanov2015, RabeS16, BalabanovJ12, Benedetti05, NarizzanoPPT09, NiemetzPLSB12, JussilaBSKW07, GoultiaevaGB11, Van2013, HeuleSB17}. The most general format of the certificate is a set of Skolem (Herbrand) functions representing a model for a true (false) QBF. 
+A complete certification process will ensure the correctness of the solver's result and enables reasoning tasks that require a witness. 
 %For example, similar to SAT competitions, validate the results of QBF solvers in the QBF competitions, replacing the current practice of just relying on the majority votes. 
 
-We address two of the major bottlenecks in the adoption of the certificate extraction process. First, provide complete confidence in the result of the solver. Second, generate and verify the certificates with a marginal overhead to the solving time.  We present an approach of a formally verified certificate generation to ensure complete trust in the result of the solver and the generated Skolem functions. The certification process poses an additional overhead over the verification process, for example, the resolution based QBF solver DepQBF \cite{LonsingB10} takes as much time to generate and validate the Skolem function as it takes to solve the original instance. Certificate validation is the main bottleneck in the overall process \cite{NiemetzPLSB12}, where the generated Skolem function is checked against the original formula for correctness. In \cite{NiemetzPLSB12} more than 77\% of the certification time is spent to validate the certificate using a SAT solver. Our approach eliminates the use of the explicit validation process and hence achieve the second goal. We show the effectiveness of our approach in the resolution-based certificate extraction \cite{NiemetzPLSB12}, our approach can be adopted for other QBF solving techniques.
+We address two of the major bottlenecks in the adoption of the certificate extraction process. First, provide complete confidence in the result of the solver. Second, generate and verify the certificates with a marginal overhead to the solving time. 
+We present an approach of a formally verified certificate generation and checking to ensure complete trust in the result of the solver and the generated Skolem functions. The certification validation process poses an additional overhead over the verification process, for example, the resolution based QBF solver DepQBF \cite{LonsingB10} takes as much time to generate and validate the Skolem function as it takes to solve the original instance. Certificate validation is the main bottleneck in the overall process \cite{NiemetzPLSB12}, where the generated Skolem function is checked against the original formula for correctness using a SAT solver. In \cite{NiemetzPLSB12} more than 77\% of the certification time is spent to validate the certificate. Our approach eliminates the use of the explicit validation process (SAT solver call) and verify the certificates with a marginal overhead. We show the effectiveness of our approach in the resolution-based certificate extraction \cite{NiemetzPLSB12}; our approach can be adopted for other QBF solving techniques.
 
-Formal verification approach is used in SAT solving \cite{BlanchetteFLW18} recently to formally verify the SAT solvers to have guarantee confidence in the results. To our best knowledge this is the first application of formally verification used in QBFs. We hope that approach developed in this paper will generate more interest in automated verification in QBFs, lead to the goal of having complete certification based approach for QBFs. 
+Formal verification (automated/interactive theorem proving) approach \cite{Fleury2018a, Fleury2019a, BlanchetteFLW18} and verified certificate checking \cite{Cruz2017, Cruz2017b, Heule2017a, Lammich17} is used recently in SAT solving. This approach provides guaranteed confidence in the result of the solver and has revealed critical bugs \cite{Lammich17} in unverified tools. 
+
+To our best knowledge, this is the first application of formal verification in QBFs. We hope the approach developed in this paper will generate more interest in automated verification of QBFs and lead us closer to the adoption of efficient verified certification checking with minimal overhead. \\
  
+ 
+\textbf{DepQBF Use Cases}: 
+Following are the examples that require DepQBF with function synthesis and simple yes/no answer is not enough:
+ 
+\begin{enumerate}
+ 	\item In BMC or reachability analysis \cite{BloemKS14}, if the safety property is violated, the tool should provide a counter-example. 
+ 	
+ 	\item Planning as Quantified Boolean Formula \cite{Cashmore2012planning, EglyKLP17, Gasquet18}. The strategy for the outermost existential variable corresponds to a plan. 
+ 	\item In hardware circuit synthesis \cite{BloemEKKL14, BloemKS14, Faymonville2017, Subramanyan2013, Li2013} it's not enough to know if there exist an implementation. A strategy is required, to construct a circuit that implements a blackbox. In \cite{Subramanyan2013, Li2013} the problem is modeled as a 2QBF. Synthesizing optimal switching lattices \cite{Gange2014synthesizing}: problem is encoded as 2QBF. 
+ 	\item Firewalls verification and synthesis \cite{Zhang2012verification}. The problem was encoded as 2QBF. Synthesized assignment amounts to the definition of rules of the firewall.
+ 	\item Biological networks synthesis \cite{GuptaMS18}; completion of the network and predicting activities of the molecules with incomplete information requires Skolem function to be synthesized to develop wet experiments in laboratories.  
+\end{enumerate}
+
+\textbf{Other Use Cases} (Yes/No answer is sufficient):
+
+\begin{enumerate}
+    \item Cryptography: DepQBF solver was used to verify whether the precondition holds in a secure multiparty computation \cite{Launchbury2014application}. 
+	\item Application to AI (argumentation frameworks): abstract dialectical frameworks \cite{Brewka2020solving, Diller2014reasoning}. ADF is compiled to a QBF and solved using DepQBF.
+	\item Adversarial games: Tic-Tac-Toe \cite{DiptaramaYS16}.
+\end{enumerate}
+
 \section{Preliminaries}
 \label{sec:pre}
 
@@ -216,8 +240,8 @@ An \textit{assignment} is a mapping of variables to boolean values $\1, \0$. We 
 A closed PCNF formula is true if and only if there exists an assignment of truth values to the existential variables depending on the preceding universal variables in the quantifier prefix such that the matrix of the formula is true for all values of the universal variables.
 %
 
-QBF satisfaction can be understood as a two players zero sum game. There are two players in the game: the existential player
-owns the existentially quantified variables, the universal player owns the rest. The players step through the quantifier prefix, and as each variable is encountered, the player who owns it declares a value for it. The existential player wins a run of the game if the constructed assignment satisfies all clauses in the matrix; otherwise the universal player wins. A QBF is true if and only if the existential player has a winning strategy that allows him to win no matter how the universal player plays; it is false if and only if the universal player has a winning strategy. Thus, a strategy for the universal player, and a proof that it is a winning strategy, is a proof that the QBF is false.
+QBF satisfaction can be understood as a two players zero sum game. There are two players in the game: the existential player; owns the existentially quantified variables, and the universal player, owns the universally quantified variables. A single round of play is as follows: step through the variable in the quantifier prefix, the player who owns it assigns it a value. The existential player wins a round of the game if the constructed assignment satisfies all clauses in the matrix, otherwise the universal player wins. A QBF is true if and only if the existential player has a winning strategy that allows him to win irrespective how the universal player plays. A QBF is false if and only if the universal player has a winning strategy. 
+%Thus, a strategy for the universal player, and a proof that it is a winning strategy, is a proof that the QBF is false.
 
 \section{Related Work} \label{sec:related-work}
 
