--- a/Paper/literature.bib
+++ b/Paper/literature.bib
@@ -133,23 +133,6 @@ at the end of the file.
   year      = {1989}
 }
 
-@inproceedings{BloemKS14,
-	author    = {Roderick Bloem and
-	Robert K{\"{o}}nighofer and
-	Martina Seidl},
-	editor    = {Kenneth L. McMillan and
-	Xavier Rival},
-	title     = {SAT-Based Synthesis Methods for Safety Specs},
-	booktitle = {Verification, Model Checking, and Abstract Interpretation - 15th International
-	Conference, {VMCAI} 2014, San Diego, CA, USA, January 19-21, 2014,
-	Proceedings},
-	series    = {Lecture Notes in Computer Science},
-	volume    = {8318},
-	pages     = {1--20},
-	publisher = {Springer},
-	year      = {2014},
-}
-
 
 @inproceedings{MillerSB13,
 	author    = {Christian Miller and
@@ -329,6 +312,226 @@ at the end of the file.
 	pages     = {473--489},
 	publisher = {Springer},
 	year      = {2013}
+}
+
+@inproceedings{BloemEKKL14,
+	author    = {Roderick Bloem and
+	Uwe Egly and
+	Patrick Klampfl and
+	Robert K{\"{o}}nighofer and
+	Florian Lonsing},
+	title     = {SAT-based methods for circuit synthesis},
+	booktitle = {{FMCAD}},
+	pages     = {31--34},
+	publisher = {{IEEE}},
+	year      = {2014}
+}
+
+@inproceedings{GuptaMS18,
+	author    = {Ashutosh Gupta and
+	Somya Mani and
+	Ankit Shukla},
+	title     = {Synthesis for Vesicle Traffic Systems},
+	booktitle = {{CMSB}},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {11095},
+	pages     = {93--110},
+	publisher = {Springer},
+	year      = {2018}
+}
+
+@inproceedings{BloemKS14,
+	author    = {Roderick Bloem and
+	Robert K{\"{o}}nighofer and
+	Martina Seidl},
+	title     = {SAT-Based Synthesis Methods for Safety Specs},
+	booktitle = {{VMCAI}},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {8318},
+	pages     = {1--20},
+	publisher = {Springer},
+	year      = {2014}
+}
+
+@article{Subramanyan2013,
+	title={Reverse engineering digital circuits using structural and functional analyses},
+	author={Subramanyan, Pramod and Tsiskaridze, Nestan and Li, Wenchao and Gasc{\'o}n, Adria and Tan, Wei Yang and Tiwari, Ashish and Shankar, Natarajan and Seshia, Sanjit A and Malik, Sharad},
+	journal={IEEE Transactions on Emerging Topics in Computing},
+	volume={2},
+	number={1},
+	pages={63--80},
+	year={2013},
+	publisher={IEEE}
+}
+
+@inproceedings{Li2013,
+	title={Wordrev: Finding word-level structures in a sea of bit-level gates},
+	author={Li, Wenchao and Gascon, Adria and Subramanyan, Pramod and Tan, Wei Yang and Tiwari, Ashish and Malik, Sharad and Shankar, Natarajan and Seshia, Sanjit A},
+	booktitle={2013 IEEE international symposium on hardware-oriented security and trust (HOST)},
+	pages={67--74},
+	year={2013},
+	organization={IEEE}
+}
+
+@inproceedings{Faymonville2017,
+	title={BoSy: An experimentation framework for bounded synthesis},
+	author={Faymonville, Peter and Finkbeiner, Bernd and Tentrup, Leander},
+	booktitle={International Conference on Computer Aided Verification},
+	pages={325--332},
+	year={2017},
+	organization={Springer}
+}
+
+@inproceedings{Zhang2012verification,
+	title={Verification and synthesis of firewalls using SAT and QBF},
+	author={Zhang, Shuyuan and Mahmoud, Abdulrahman and Malik, Sharad and Narain, Sanjai},
+	booktitle={2012 20th IEEE International Conference on Network Protocols (ICNP)},
+	pages={1--6},
+	year={2012},
+	organization={IEEE}
+}
+
+@inproceedings{Launchbury2014application,
+	title={Application-scale secure multiparty computation},
+	author={Launchbury, John and Archer, Dave and DuBuisson, Thomas and Mertens, Eric},
+	booktitle={European Symposium on Programming Languages and Systems},
+	pages={8--26},
+	year={2014},
+	organization={Springer}
+}
+
+@article{Brewka2020solving,
+	title={Solving Advanced Argumentation Problems with Answer Set Programming},
+	author={Brewka, Gerhard and Diller, Martin and Heissenberger, Georg and Linsbichler, Thomas and Woltran, Stefan},
+	journal={Theory and Practice of Logic Programming},
+	volume={20},
+	number={3},
+	pages={391--431},
+	year={2020},
+	publisher={Cambridge University Press}
+}
+
+@article{Gange2014synthesizing,
+	title={Synthesizing optimal switching lattices},
+	author={Gange, Graeme and S{\o}ndergaard, Harald and Stuckey, Peter J},
+	journal={ACM Transactions on Design Automation of Electronic Systems (TODAES)},
+	volume={20},
+	number={1},
+	pages={1--14},
+	year={2014},
+	publisher={ACM New York, NY, USA}
+}
+
+@inproceedings{Cashmore2012planning,
+	title={Planning as Quantified Boolean Formula.},
+	author={Cashmore, Michael and Fox, Maria and Giunchiglia, Enrico},
+	booktitle={ECAI},
+	volume={242},
+	pages={217--222},
+	year={2012}
+}
+
+@inproceedings{Diller2014reasoning,
+	title={Reasoning in Abstract Dialectical Frameworks Using Quantified Boolean Formulas.},
+	author={Diller, Martin and Wallner, Johannes Peter and Woltran, Stefan},
+	booktitle={COMMA},
+	pages={241--252},
+	year={2014}
+}
+
+@article{EglyKLP17,
+	author    = {Uwe Egly and
+	Martin Kronegger and
+	Florian Lonsing and
+	Andreas Pfandler},
+	title     = {Conformant planning as a case study of incremental {QBF} solving},
+	journal   = {Ann. Math. Artif. Intell.},
+	volume    = {80},
+	number    = {1},
+	pages     = {21--45},
+	year      = {2017}
+}
+
+@article{Gasquet18,
+	author    = {Olivier Gasquet and
+	Dominique Longin and
+	Frederic Maris and
+	Pierre R{\'{e}}gnier and
+	Ma{\"{e}}l Valais},
+	title     = {Compact Tree Encodings for Planning as {QBF}},
+	journal   = {Inteligencia Artif.},
+	volume    = {21},
+	number    = {62},
+	pages     = {103--114},
+	year      = {2018}
+}
+
+@inproceedings{DiptaramaYS16,
+	author    = {Diptarama and
+	Ryo Yoshinaka and
+	Ayumi Shinohara},
+	title     = {{QBF} Encoding of Generalized Tic-Tac-Toe},
+	booktitle = {QBF@SAT},
+	series    = {{CEUR} Workshop Proceedings},
+	volume    = {1719},
+	pages     = {14--26},
+	publisher = {CEUR-WS.org},
+	year      = {2016}
+}
+
+@inproceedings{Cruz2017,
+	title={Efficient certified RAT verification},
+	author={Cruz-Filipe, Lu{\'\i}s and Heule, Marijn JH and Hunt, Warren A and Kaufmann, Matt and Schneider-Kamp, Peter},
+	booktitle={International Conference on Automated Deduction},
+	pages={220--236},
+	year={2017},
+	organization={Springer}
+}
+
+@inproceedings{Cruz2017b,
+	title={Efficient certified resolution proof checking},
+	author={Cruz-Filipe, Lu{\'\i}s and Marques-Silva, Joao and Schneider-Kamp, Peter},
+	booktitle={International Conference on Tools and Algorithms for the Construction and Analysis of Systems},
+	pages={118--135},
+	year={2017},
+	organization={Springer}
+}
+
+@inproceedings{Heule2017a,
+	title={Efficient, verified checking of propositional proofs},
+	author={Heule, Marijn and Hunt, Warren and Kaufmann, Matt and Wetzler, Nathan},
+	booktitle={International Conference on Interactive Theorem Proving},
+	pages={269--284},
+	year={2017},
+	organization={Springer}
+}
+
+@inproceedings{Fleury2018a,
+	title={A verified SAT solver with watched literals using Imperative HOL},
+	author={Fleury, Mathias and Blanchette, Jasmin Christian and Lammich, Peter},
+	booktitle={Proceedings of the 7th ACM SIGPLAN International Conference on Certified Programs and Proofs},
+	pages={158--171},
+	year={2018}
+}
+
+@inproceedings{Fleury2019a,
+	title={Optimizing a verified SAT solver},
+	author={Fleury, Mathias},
+	booktitle={NASA Formal Methods Symposium},
+	pages={148--165},
+	year={2019},
+	organization={Springer}
+}
+
+@inproceedings{Lammich17,
+	author    = {Peter Lammich},
+	title     = {Efficient Verified {(UN)SAT} Certificate Checking},
+	booktitle = {{CADE}},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {10395},
+	pages     = {237--254},
+	publisher = {Springer},
+	year      = {2017}
 }
 
 @article{BlanchetteFLW18,
