Completed Related Work

--- a/Paper/literature.bib
+++ b/Paper/literature.bib
@@ -479,6 +479,18 @@ at the end of the file.
 	year      = {2016}
 }
 
+@inproceedings{ChewC20,
+	author    = {Leroy Chew and
+	Judith Clymo},
+	title     = {How {QBF} Expansion Makes Strategy Extraction Hard},
+	booktitle = {{IJCAR} {(1)}},
+	series    = {Lecture Notes in Computer Science},
+	volume    = {12166},
+	pages     = {66--82},
+	publisher = {Springer},
+	year      = {2020}
+}
+
 @inproceedings{Cruz2017,
 	title={Efficient certified RAT verification},
 	author={Cruz-Filipe, Lu{\'\i}s and Heule, Marijn JH and Hunt, Warren A and Kaufmann, Matt and Schneider-Kamp, Peter},
