--- a/Paper/2021_QBF_Cert.tex
+++ b/Paper/2021_QBF_Cert.tex
@@ -194,7 +194,7 @@
 
 \section{Introduction}
 \label{sec:intro}
-Quantified Boolean formulas (QBFs) is an extension of propositional formulas with existential and universal quantifiers over the propositional variables. The use of quantifiers provides more succinct encoding of problems than with just propositional variables. For example QBF encoding of Bounded model checking (BMC) problem \cite{DershowitzHK05} can be exponentially more compact than corresponding propositional encoding. However, this comes with a price, QBFs are much more difficult to solve than propositional formulas. The decision problem of propositional satisfiability (SAT) is NP-complete \cite{Cook71} whereas, the decision problem of QBFs (QSAT) is the prototypical PSPACE-problem \cite{StockmeyerM73}. QBF is a powerful host language for many application domains in automated reasoning and artificial intelligence, including planning \cite{AnsoteguiGS05, EglyKLP17}, verification \cite{MillerSB13} and synthesis \cite{BloemKS14, BloemEKKL14}.
+Quantified Boolean formulas (QBFs) is an extension of propositional formulas with existential and universal quantifiers over the propositional variables. The use of quantifiers provides more succinct encoding of problems than with just propositional variables. For example QBF encoding of Bounded model checking (BMC) problem \cite{DershowitzHK05} can be exponentially more compact than corresponding propositional encoding. However, this comes with a price, QBFs are much more difficult to solve than propositional formulas. The decision problem of propositional satisfiability (SAT) is NP-complete \cite{Cook71} whereas, the decision problem of QBFs (QSAT) is the prototypical PSPACE-problem \cite{StockmeyerM73}. QBF is a powerful host language for many application domains in automated reasoning and artificial intelligence, including planning \cite{AnsoteguiGS05, EglyKLP17, Cashmore2012planning, Gasquet18}, verification \cite{MillerSB13} and synthesis \cite{BloemKS14, BloemEKKL14, Gange2014synthesizing}.
 
 For many of the applications of QBFs, finding whether QBF is \textit{true} or \textit{false} is not enough and sometimes worthless. For instance, in BMC, if the safety property is violated, the tool should provide a counter-example. Therefore, in addition to bare yes/no answers, a QBF solver must provide \textit{certificates} to construct the counter-examples. In comparison to SAT, the QBF technology is still in the early stages of it's development, and the solvers are relatively more error-prone. To establish the trust in the correctness of a QBF solver certificates are a must. Most of the modern QBF solvers in addition to solve the satisfiability problem of the formula produce certificates \cite{Balabanov2015, RabeS16, BalabanovJ12, Benedetti05, NarizzanoPPT09, NiemetzPLSB12, JussilaBSKW07, GoultiaevaGB11, Van2013, HeuleSB17}. The most general format of the certificate is a set of Skolem (Herbrand) functions representing a model for a true (false) QBF. 
 A complete certification process will ensure the correctness of the solver's result and enables reasoning tasks that require a witness. 
@@ -205,7 +205,7 @@ We present an approach of a formally verified certificate generation and checkin
 
 Formal verification (automated/interactive theorem proving) approach \cite{Fleury2018a, Fleury2019a, BlanchetteFLW18} and verified certificate checking \cite{Cruz2017, Cruz2017b, Heule2017a, Lammich17} is used recently in SAT solving. This approach provides guaranteed confidence in the result of the solver and has revealed critical bugs \cite{Lammich17} in unverified tools. 
 
-To our best knowledge, this is the first application of formal verification in QBFs. We hope the approach developed in this paper will generate more interest in automated verification of QBFs and lead us closer to the adoption of efficient verified certification checking with minimal overhead. \\
+To our best knowledge, this is the first application of the verified approach in QBFs. We hope the approach developed in this paper will generate more interest in automated verification of QBFs and lead us closer to the adoption of efficient verified certification checking with minimal overhead. \\
  
  
 \textbf{DepQBF Use Cases}: 
@@ -240,8 +240,10 @@ An \textit{assignment} is a mapping of variables to boolean values $\1, \0$. We 
 A closed PCNF formula is true if and only if there exists an assignment of truth values to the existential variables depending on the preceding universal variables in the quantifier prefix such that the matrix of the formula is true for all values of the universal variables.
 %
 
-QBF satisfaction can be understood as a two players zero sum game. There are two players in the game: the existential player; owns the existentially quantified variables, and the universal player, owns the universally quantified variables. A single round of play is as follows: step through the variable in the quantifier prefix, the player who owns it assigns it a value. The existential player wins a round of the game if the constructed assignment satisfies all clauses in the matrix, otherwise the universal player wins. A QBF is true if and only if the existential player has a winning strategy that allows him to win irrespective how the universal player plays. A QBF is false if and only if the universal player has a winning strategy. 
+QBF satisfiability can be understood as a two players zero sum game. There are two players in the game: the existential player; owns the existentially quantified variables, and the universal player, owns the universally quantified variables. A single round of play is as follows: step through the variable in the quantifier prefix, the player who owns it assigns it a value. The existential player wins a round of the game if the constructed assignment satisfies all clauses in the matrix, otherwise the universal player wins. A QBF is true if and only if the existential player has a winning strategy that allows him to win irrespective how the universal player plays. A QBF is false if and only if the universal player has a winning strategy. 
 %Thus, a strategy for the universal player, and a proof that it is a winning strategy, is a proof that the QBF is false.
+
+XXX
 
 \section{Related Work} \label{sec:related-work}
 
@@ -318,13 +320,14 @@ pin={[pinstyle]above:}
 	\caption{Completely solved by pre-processing}
 \end{subfigure}
 
-\caption{The complete architecture of the tool chain. XXX}\label{fig:tool}
+\caption{Skolem function extraction without and with- preprocessing. Herbrand function can be extracted by $\qrpcert$ (a) but not supported by QRATtrim (b)}\label{fig:tool}
 \end{figure}
 
 Generally, QBF instance is first passed through a preprocessor to simplify the original instance. The original instance is rewritten to an equi-satisfiable formula which is then passed to the QBF solver. To handle the preprocessing techniques quantified resolution asymmetric tautology (QRAT) proof system was introduced in \cite{HeuleSB14a}. QRAT is a framework that allows verification of all preprocessing techniques for QBFs with three simple rules \cite{HeuleSB14a}. The implementation integrate QRAT-based tracing to the pre-processor $\bloqqer$ \cite{Biere2011} and present an efficient QRAT proof checker $\qtrim$.
 In the subsequent work, \cite{HeuleSB14}, the authors extend the capabilities of $\qtrim$ to extract and validate the Skolem function from a completely solved instance after the pre-processing (by $\bloqqer$). 
 %The validation of Skolem functions checks the dependencies and computes whether the Skolem functions imply the formula using the SAT solver is performed by a tool $\cheskol$.
 Figure \ref{fig:tool} (b) show the architecture of the tool.
+The main drawback of the approach is that it supports \textbf{only Skolem functions extraction} from formulas which are solved by the preprocessor. Skolem functions consider only deleted clauses of a proof whereas Herbrand functions consider both newly introduced clauses and updated clauses. Reason? May be : A clause addition step may even introduce new variables. XXX
 
 
 The work \cite{FazekasHSB17} combines the partial Skolem function extracted from the QRAT trace and combine it with the Skolem function extracted by $\qcert$ of the pre-processed formula. The approach obtain Skolem functions with
@@ -349,7 +352,7 @@ A similar approach to  \cite{FazekasHSB17} was developed in \cite{JanotaGM13} to
 	\node [block1, left of=controller, node distance=3.8cm] (system) {QRATtrim};
 	\node [block1, right of=controller, node distance=4cm] (system2) {sk-extract};
 	\node [below of=system2, node distance=1.8cm] (skolem1) {$f^{\prime}$};
-	\node [block4, name=input, right of=skolem] (prop4) {Extract};  
+	\node [block4, name=input, right of=skolem] (prop4) {extract};  
 	\node [right of=prop4, node distance=1.8cm] (skolemf) {$f$};
 	\node [below of=system, node distance=1.8cm] (skolemf2) {$f$};
 	
@@ -365,9 +368,10 @@ A similar approach to  \cite{FazekasHSB17} was developed in \cite{JanotaGM13} to
 	\draw [->,thick,decorate,decoration={amplitude=.4mm,segment length=2mm,post length=1mm}] (system) -- node[name=u] {} (skolemf2);  
 	\draw [->,thick,decorate,decoration={amplitude=.4mm,segment length=2mm,post length=1mm}] (controller) -- node[name=u] {QRAT trace} (system2);
 	\end{tikzpicture}
-	\caption{Pre-processing with QBF solving}
+	\caption{Tool chain of sk-extract. Skolem function can be extracted for Pre-processing combined with the QBF solving. No support for Herbrand function.}
 \end{figure}
 
+\noindent\textbf{News}:  QBF proof checking format QRAT cannot have polynomial time strategy extraction unless P = PSPACE \cite{ChewC20}.
 \section{Program Verification with Isabelle/HOL} \label{sec:Isabelle}
 
 XXX
